build.log
warning: unused import: `BaseFU`
 --> src/bus.rs:1:17
  |
1 | use crate::fu::{BaseFU, NeuralFunctionalUnit};
  |                 ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `len`
   --> src/fu.rs:232:13
    |
232 |         let len = input.len();
    |             ^^^ help: if this is intentional, prefix it with an underscore: `_len`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `dev`
  --> src/bus.rs:85:26
   |
85 | ...     if let Some(dev) = self.mmio.get_mut(&ad...
   |                     ^^^ help: if this is intentional, prefix it with an underscore: `_dev`

warning: `neuro_symbolic_emulator` (lib) generated 3 warnings (run `cargo fix --lib -p neuro_symbolic_emulator` to apply 3 suggestions)
    Checking neuro_symbolic_emulator v0.1.0 (/home/cyrex/Projects/neuro_symbolic_emulator)
warning: unused import: `ProgramCounterFU`
 --> src/bin/manage_fus.rs:5:65
  |
5 | ...unctionalUnit, ProgramCounterFU};
  |                   ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Array2`
 --> src/bin/manage_fus.rs:6:23
  |
6 | use ndarray::{Array1, Array2};
  |                       ^^^^^^

warning: variable does not need to be mutable
   --> src/bin/manage_fus.rs:244:9
    |
244 |     let mut rng = rand::thread_rng();
    |         ----^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `rng`
   --> src/bin/manage_fus.rs:244:9
    |
244 |     let mut rng = rand::thread_rng();
    |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_rng`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `neuro_symbolic_emulator` (bin "manage_fus") generated 4 warnings (run `cargo fix --bin "manage_fus" -p neuro_symbolic_emulator` to apply 4 suggestions)
error[E0432]: unresolved import `neuro_symbolic_emulator::gate`
 --> src/bin/train_gates.rs:7:30
  |
7 | use neuro_symbolic_emulator::gate::{Activation, NeuralGate};
  |                              ^^^^ could not find `gate` in `neuro_symbolic_emulator`

error[E0432]: unresolved import `neuro_symbolic_emulator::circuit`
 --> src/bin/verify_circuits.rs:2:30
  |
2 | use neuro_symbolic_emulator::circuit::NeuralCircuit;
  |                              ^^^^^^^ could not find `circuit` in `neuro_symbolic_emulator`

error[E0432]: unresolved import `neuro_symbolic_emulator::gate`
 --> src/bin/verify_circuits.rs:3:30
  |
3 | use neuro_symbolic_emulator::gate::NeuralGate;
  |                              ^^^^ could not find `gate` in `neuro_symbolic_emulator`

error[E0603]: struct import `NeuralRegister` is private
 --> src/loader.rs:7:29
  |
7 | use crate::bus::{SystemBus, NeuralRegister};
  |                             ^^^^^^^^^^^^^^ private struct import
  |
note: the struct import `NeuralRegister` is defined here...
 --> src/bus.rs:2:5
  |
2 | use crate::register::NeuralRegister;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the struct `NeuralRegister` which is defined here
 --> src/register.rs:4:1
  |
4 | pub struct NeuralRegister {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ you could import this directly
help: import `NeuralRegister` through the re-export
  |
7 | use crate::bus::{SystemBus, register::NeuralRegister};
  |                             ++++++++++

warning: unused imports: `BaseFU`, `NeuralFunctionalUnit`, and `ProgramCounterFU`
 --> src/system.rs:2:17
  |
2 | use crate::fu::{BaseFU, ProgramCounterFU, UartFU, NeuralFunctionalUnit};
  |                 ^^^^^^  ^^^^^^^^^^^^^^^^          ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ndarray::Array1`
 --> src/system.rs:3:5
  |
3 | use ndarray::Array1;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `std::thread`
 --> src/gui.rs:6:5
  |
6 | use std::thread;
  |     ^^^^^^^^^^^

warning: unused import: `std::time::Duration`
 --> src/gui.rs:7:5
  |
7 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved import `neuro_symbolic_emulator::circuit`
 --> src/bin/ripple_adder.rs:2:30
  |
2 | use neuro_symbolic_emulator::circuit::NeuralCircuit;
  |                              ^^^^^^^ could not find `circuit` in `neuro_symbolic_emulator`

warning: unused import: `std::collections::HashMap`
 --> src/loader.rs:2:5
  |
2 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved import `neuro_symbolic_emulator::gate`
 --> src/bin/ripple_adder.rs:3:30
  |
3 | use neuro_symbolic_emulator::gate::NeuralGate;
  |                              ^^^^ could not find `gate` in `neuro_symbolic_emulator`

warning: unused import: `Context`
 --> src/loader.rs:4:22
  |
4 | use anyhow::{Result, Context};
  |                      ^^^^^^^

warning: unused import: `ndarray::Array1`
 --> src/loader.rs:5:5
  |
5 | use ndarray::Array1;
  |     ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> src/bin/train_fu.rs:49:38
   |
49 |              let cur_loss = evaluate(&best_fu, &val_set);
   |                             -------- ^^^^^^^^ types differ in mutability
   |                             |
   |                             arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut BaseFU`
                      found reference `&BaseFU`
note: function defined here
  --> src/bin/train_fu.rs:93:4
   |
93 | fn evaluate(fu: &mut BaseFU, batch: &Vec<(Array1<f32>, Array1<f32>)>) -> f32 {
   |    ^^^^^^^^ ---------------

For more information about this error, try `rustc --explain E0432`.
For more information about this error, try `rustc --explain E0308`.
error: could not compile `neuro_symbolic_emulator` (bin "train_gates") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `neuro_symbolic_emulator` (bin "train_fu") due to 1 previous error
error: could not compile `neuro_symbolic_emulator` (bin "verify_circuits") due to 2 previous errors
error: could not compile `neuro_symbolic_emulator` (bin "ripple_adder") due to 2 previous errors
error[E0061]: this function takes 6 arguments but 3 arguments were supplied
  --> src/loader.rs:68:27
   |
68 |                  Box::new(BaseFU::new(unit_cfg.name.len(), 1, 1)) // Dummy
   |                           ^^^^^^^^^^^--------------------------- three arguments of type `ArrayBase<OwnedRepr<f32>, Dim<[usize; 1]>>`, `Activation`, and `Activation` are missing
   |
note: expected `ArrayBase<OwnedRepr<f32>, ...>`, found `usize`
  --> src/loader.rs:68:39
   |
68 |                  Box::new(BaseFU::new(unit_cfg.name.len(), 1, 1)) // Dummy
   |                                       ^^^^^^^^^^^^^^^^^^^
   = note: expected struct `ArrayBase<OwnedRepr<f32>, Dim<[usize; 2]>>`
                found type `usize`
note: expected `ArrayBase<OwnedRepr<f32>, ...>`, found integer
  --> src/loader.rs:68:60
   |
68 |                  Box::new(BaseFU::new(unit_cfg.name.len(), 1, 1)) // Dummy
   |                                                            ^
   = note: expected struct `ArrayBase<OwnedRepr<f32>, Dim<[usize; 1]>>`
                found type `{integer}`
note: expected `ArrayBase<OwnedRepr<f32>, ...>`, found integer
  --> src/loader.rs:68:63
   |
68 |                  Box::new(BaseFU::new(unit_cfg.name.len(), 1, 1)) // Dummy
   |                                                               ^
   = note: expected struct `ArrayBase<OwnedRepr<f32>, Dim<[usize; 2]>>`
                found type `{integer}`
note: associated function defined here
  --> src/fu.rs:59:12
   |
59 |     pub fn new(
   |            ^^^
60 |         w1: Array2<f32>, b1: Array1<f32>,
   |         ---------------  ---------------
61 |         w2: Array2<f32>, b2: Array1<f32>,
   |         ---------------  ---------------
62 |         active_hidden: Activation, active_output: Activation
   |         -------------------------  -------------------------
help: provide the arguments
   |
68 -                  Box::new(BaseFU::new(unit_cfg.name.len(), 1, 1)) // Dummy
68 +                  Box::new(BaseFU::new(/* ArrayBase<OwnedRepr<f32>, Dim<[usize; 2]>> */, /* ArrayBase<OwnedRepr<f32>, Dim<[usize; 1]>> */, /* ArrayBase<OwnedRepr<f32>, Dim<[usize; 2]>> */, /* ArrayBase<OwnedRepr<f32>, Dim<[usize; 1]>> */, /* Activation */, /* Activation */)) // Dummy
   |

warning: unused variable: `dev`
  --> src/bus.rs:85:26
   |
85 |              if let Some(dev) = self.mmio.get_mut(&addr) {
   |                          ^^^ help: if this is intentional, prefix it with an underscore: `_dev`

warning: unused variable: `cc`
  --> src/gui.rs:20:16
   |
20 |     pub fn new(cc: &eframe::CreationContext<'_>) -> Self {
   |                ^^ help: if this is intentional, prefix it with an underscore: `_cc`

Some errors have detailed explanations: E0061, E0603.
For more information about an error, try `rustc --explain E0061`.
warning: `neuro_symbolic_emulator` (bin "neuro_symbolic_emulator") generated 11 warnings (2 duplicates)
error: could not compile `neuro_symbolic_emulator` (bin "neuro_symbolic_emulator") due to 2 previous errors; 11 warnings emitted
